--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -99,7 +99,8 @@
 
                 <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants">
                     <partial name="Product.AssociatedProducts" model="Model.AssociatedProductsList" />
-                    @*@if (Model.AssociatedProducts.Count == 0)
+                    @*BEGIN: Old associated products*@
+                    @if (Model.AssociatedProducts.Count == 0)
                     {
                         <div class="pd-no-associated-products alert alert-warning">
                             @T("Products.NoAssociatedProducts")
@@ -111,9 +112,12 @@
                         {
                             var dataDictProduct = new ViewDataDictionary(ViewData);
                             dataDictProduct.TemplateInfo.HtmlFieldPrefix = string.Format("product_{0}", product.Id);
+
+                            <hr />
                             <partial name="Product.AssociatedProduct" model="product" view-data="dataDictProduct" />
                         }
-                    }*@
+                    }
+                    @*END: Old associated products*@
                 </section>
             </form>
         </div>
