--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -1,50 +1,45 @@
 ﻿@using Smartstore.Web.Models.Catalog
 
-@model AssociatedProductsListModel
+@model GroupedProductModel
 
 @{
+    var collapsable = Model.Configuration.Collapsable;
+    var headerFields = Model.Configuration.HeaderFields;
+    var showSku = headerFields?.Any(x => x.EqualsNoCase("sku")) ?? false;
+    var showPrice = headerFields?.Any(x => x.EqualsNoCase("price")) ?? false;
 }
 
-@if (Model.Products.Count == 0 && Model.Products.PageIndex == 0)
-{
-    <div class="pd-no-associated-products alert alert-warning">
-        @T("Products.NoAssociatedProducts")
-    </div>
-    return;
-}
+<div id="associated-products" attr-class='(collapsable, "accordion")'>
+    @foreach (var product in Model.Products)
+    {
+        var id = $"associated-product{product.Id}";
+        var productViewData = new ViewDataDictionary(ViewData);
+        productViewData.TemplateInfo.HtmlFieldPrefix = $"product_{product.Id}";
 
-<div>
-    <div id="associated-products" class="accordion">
-        @foreach (var product in Model.Products)
+        if (collapsable)
         {
-            var id = $"associated-product{product.Id}";
-            var productViewData = new ViewDataDictionary(ViewData);
-            productViewData.TemplateInfo.HtmlFieldPrefix = string.Format("product_{0}", product.Id);
-
             <div class="card pd-associated-product">
                 <div class="card-header">
                     <div class="card-title pd-associated-product-title collapsed row" role="button" data-toggle="collapse" data-target="#@id" aria-controls="@id" aria-expanded="false">
-                        <div class="col col-4">
+                        <div class="col col-4" title="@product.Name">
                             @Html.Raw(product.Name)
                         </div>
-                        <div class="col col-2">
+                        <div sm-if="showSku" class="col col-2" title="@product.Sku">
                             @product.Sku
                         </div>
-                        <div class="col col-1 justify-content-end">
+                        <div sm-if="showPrice" class="col col-1 justify-content-end">
                             @Html.Raw(product.Price.FinalPrice)
                         </div>
                         @*<div class="col col-auto">
-                            @Html.EditorFor(x => product, "QtyInput", new { size = ControlSize.Small })
-                        </div>*@
-                        <div class="col col-1 justify-content-center">
+                                @Html.EditorFor(x => product, "QtyInput", new { size = ControlSize.Small })
+                            </div>*@
+                        <div class="col col-auto p-0 ml-auto">
                             <a class="btn btn-primary btn-sm btn-icon" title='@T("ShoppingCart.AddToCart")'
                                href="javascript:;"
                                rel="nofollow">
                                 <i class="fa fa-cart-arrow-down"></i>
                             </a>
-                        </div>
-                        <div class="col col-auto p-0 ml-auto">
-                            <i class="fas fa-angle-up collapse-chevron m-0"></i>
+                            <i class="fas fa-angle-up collapse-chevron m-0 ml-2"></i>
                         </div>
                     </div>
                 </div>
@@ -55,7 +50,12 @@
                 </div>
             </div>
         }
-    </div>
+        else
+        {
+            <hr />
+            <partial name="Product.AssociatedProduct" model="product" view-data="productViewData" />
+        }
+    }
 </div>
 
 @if (Model.Products.TotalPages > 1)
