Revamp grouped product

--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_product.scss
@@ -604,11 +604,11 @@ $pd-offer-spacing:              $grid-gutter-width / 2;
 
 // Associated products
 // =====================================================
-.pd-associated-product-title {
-    background-color: rgba(#000, 0.03);
+.pd-associated-product-header {
+    /*background-color: rgba(#000, 0.03);*/
     padding: 0.625rem;
 
-    > .col:not(:last-child) {
+    > .col {
         display: flex;
         padding: 0.3rem 0.5rem;
         align-items: center;
