--- a/src/Smartstore.Web/Views/Product/Product.cshtml
+++ b/src/Smartstore.Web/Views/Product/Product.cshtml
@@ -98,7 +98,7 @@
                 </section>
 
                 <section sm-if="Model.ProductType == ProductType.GroupedProduct" class="pd-section pd-section-variants">
-                    @if (Model.GroupedProduct.Products.Count > 0)
+                    @if (Model.GroupedProduct?.Products?.Count > 0)
                     {
                         <partial name="Product.AssociatedProducts" model="Model.GroupedProduct" />
                     }
