--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.cshtml
@@ -6,8 +6,7 @@
     var headerFields = Model.Configuration.HeaderFields;
     var showSku = headerFields?.Any(x => x.EqualsNoCase("sku")) ?? false;
     var showPrice = headerFields?.Any(x => x.EqualsNoCase("price")) ?? false;
-    var showThumb = headerFields?.Any(x => x.EqualsNoCase("image")) ?? false
-        && Model.Products.Any(x => x.MediaGalleryModel.Files.Count > 0 || x.MediaGalleryModel.ThumbFallbackUrl.HasValue());
+    var showThumb = headerFields?.Any(x => x.EqualsNoCase("image")) ?? false;
 
     ViewDataDictionary CreateViewData(ProductDetailsModel model)
     {
@@ -20,16 +19,24 @@
 <div id="associated-products">
     @if (Model.Configuration.Collapsable)
     {
-        <div class="accordion">
+        <div class="accordion pd-associated-products">
             @foreach (var product in Model.Products)
             {
                 var id = $"associated-product{product.Id}";
                 var gallery = product.MediaGalleryModel;
                 var img = gallery?.Files?.FirstOrDefault();
 
-                <div class="card pd-associated-product">
+                <div class="card">
                     <div class="card-header">
-                        <div class="card-title pd-associated-product-header collapsed row" role="button" data-toggle="collapse" data-target="#@id" aria-controls="@id" aria-expanded="false">
+                        @*<div class="pd-associated-product-controls d-flex mr-4">
+                                @Html.EditorFor(x => product.AddToCart, "QtyInput", new { size = ControlSize.Small })
+
+                                <a class="btn btn-primary btn-sm btn-icon ml-1" href="javascript:;" rel="nofollow" title="@T("ShoppingCart.AddToCart")">
+                                    <i class="fa fa-cart-arrow-down"></i>
+                                </a>
+                            </div>*@
+                        @*<div class="card-title pd-associated-product-title collapsed row" aria-expanded="false" role="button" data-toggle="collapse" data-target="#@id" aria-controls="@id">*@
+                        <div class="card-title pd-associated-product-title row collapsed" aria-expanded="false" role="button" data-target="#@id" aria-controls="@id">
                             <div sm-if="showThumb" class="col col-auto">
                                 @if (img != null)
                                 {
@@ -41,24 +48,22 @@
                                 }
                             </div>
                             <div class="col @(showSku || showPrice ? "col-4" : "col-8")" title="@product.Name">
-                                @Html.Raw(product.Name)
+                                <span class="text-truncate">@Html.Raw(product.Name)</span>
                             </div>
                             <div sm-if="showSku" class="col col-2" title="@product.Sku">
-                                @product.Sku
+                                <span class="text-truncate">@product.Sku</span>
                             </div>
                             <div sm-if="showPrice" class="col col-1 justify-content-end">
-                                @Html.Raw(product.Price.FinalPrice)
+                                <span class="text-truncate">@Html.Raw(product.Price.FinalPrice)</span>
                             </div>
-                            @*<div class="col col-auto">
-                                    @Html.EditorFor(x => product, "QtyInput", new { size = ControlSize.Small })
-                                </div>*@
-                            <div class="col col-auto p-0 ml-auto">
-                                <a class="btn btn-primary btn-sm btn-icon" title='@T("ShoppingCart.AddToCart")'
-                                   href="javascript:;"
-                                   rel="nofollow">
+                            <div class="col pd-associated-products-actions">
+                                <div class="pd-qty-input-container pd-interaction">
+                                    @Html.EditorFor(x => product.AddToCart, "QtyInput", new { size = ControlSize.Small })
+                                </div>
+                                <a class="pd-interaction btn btn-primary btn-sm btn-icon ml-1" href="javascript:;" rel="nofollow" title="@T("ShoppingCart.AddToCart")">
                                     <i class="fa fa-cart-arrow-down"></i>
                                 </a>
-                                <i class="fas fa-angle-up collapse-chevron m-0 ml-2"></i>
+                                <i class="fas fa-angle-up collapse-chevron align-content-end m-0 ml-2"></i>
                             </div>
                         </div>
                     </div>
@@ -82,10 +87,23 @@
 
     @if (Model.Products.TotalPages > 1)
     {
-        <pagination sm-list-items="Model.Products" 
-                    sm-alignment="Left" 
-                    sm-url="@Url.Action("AssociatedProducts", "Product")"
-                    sm-target="#associated-products"
-                    class="mt-3" />
+        <pagination sm-list-items="Model.Products" class="mt-2"
+                    sm-alignment="Left"
+                    sm-url="@Url.Action("AssociatedProducts", "Product", new { id = Model.Id })"
+                    sm-target="#associated-products" />
     }
 </div>
+
+<script sm-target-zone="scripts" data-origin="associated-products">
+    $(function () {
+        $('#associated-products').on('click', '.pd-associated-product-title', function (e) {
+            if ($(e.target).closest('.pd-interaction').length) {
+                return;
+            }
+
+            const title = $(this);
+            $(title.data('target')).collapse('toggle');
+            title.toggleClass('collapsed');
+        });
+    });
+</script>
